# geo_engine

./: .gitignore  AUDIT_REPORT.md  Cargo.toml  INITIALIZATION.md  Justfile  Makefile  README.md  cities.points  data.csv  district_in.db  geo-0.0.1.spx  geo.db  geo.db.sha256  state_in.db  subdistrict.db.sha256
.github/workflows/: release-assets.yml  release-from-sources.yml
cities/: cities_0.json  cities_1.json  cities_10.json  cities_100.json  cities_101.json  cities_102.json  cities_103.json  cities_104.json  cities_105.json  cities_106.json  cities_107.json  cities_108.json  cities_109.json  cities_11.json  cities_110.json  cities_111.json  cities_112.json  cities_113.json  cities_114.json  cities_115.json  cities_116.json  cities_117.json  cities_118.json  cities_119.json  cities_12.json  cities_120.json  cities_121.json  cities_122.json  cities_123.json  cities_124.json  cities_125.json  cities_126.json  cities_127.json  cities_128.json  cities_129.json  cities_13.json  cities_130.json  cities_131.json  cities_132.json  cities_133.json  (+523 more)
examples/frb/: codegen_commands.txt
scripts/: build_release_assets.sh
src/: district_data.rs  frb_api.rs  lib.rs  main.rs  spatial_sidecar.rs  wasm.rs
src/engine/: api.rs  bootstrap.rs  city.rs  error.rs  h3.rs  index.rs  lookup.rs  mod.rs  model.rs  polygon.rs  runtime.rs  spatial.rs  subdistrict_meta.rs
tests/: lookup_integration.rs
