[package]
name = "geo_engine"
version = "0.1.0"
edition = "2024"
default-run = "geo_engine"

[features]
default = []
wasm = ["dep:wasm-bindgen", "dep:serde-wasm-bindgen"]
s2 = ["dep:s2"]

[dependencies]
rstar = "0.12"
memmap2 = "0.9.10"
zstd = "0.13"
zip = "8.5"
reqwest = { version = "0.13", features = ["blocking"] }
fst = "0.4"
levenshtein_automata = "0.2"
rkyv = { version = "0.8.15", features = ["bytecheck"] }
unicode-normalization = "0.1"
deunicode = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
csv = "1"
sha2 = "0.11.0"
h3o = "0.9"
rayon = "1.12.0"
wasm-bindgen = { version = "0.2", optional = true }
serde-wasm-bindgen = { version = "0.6", optional = true }
s2 = { version = "0.0.13", optional = true, default-features = false }

[dev-dependencies]
anyhow = "1.0.102"